so many changes that all need to get down and work after that

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
     </div>
     <div class="jiggi">
-        <a href="./login.html"><button type="button" class="btn btn-primary btn-lg">YES</button></a>
-        <a href="./login.html"><button type="button" class="btn btn-secondary btn-lg">YES</button></a>
+        <a href="./start.html"><button type="button" class="btn btn-primary btn-lg">YES</button></a>
+        <a href="./start.html"><button type="button" class="btn btn-secondary btn-lg">YES</button></a>
     </div>
 
     </div>
@@ -50,4 +50,5 @@
 </body>
 
 </html>
+
 </html>
