--- a/start.html
+++ b/start.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
     <link rel="stylesheet" href="./CSS/loginStyling.css">
-    <script defer type="module" src="./JS/loginJS.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
+    <script defer type="module" src="./JS/startJS.js"></script>
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./CSS/loginStyling.css">
 </head>
 
 <body>
     <header class="topnav">
-        <a href="./login.html">
+        <a href="./start.html">
             <h1 class="title">Enjoy</h1>
         </a>
 
@@ -27,7 +27,7 @@
             <div class="userIcon"><i class="fas fa-users"></i></div>
             <input id="username" type="text" placeholder="username">
             <input id="password" type="text" placeholder="password">
-            <button class="button">Submit</button>
+            <button id="login" class="button">Submit</button>
             <a href="./signupUser.html"><button class="button">Sign Up</button></a>
         </div>
 
