--- a/signupUser.html
+++ b/signupUser.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="topnav">
-        <a href="./login.html">
+        <a href="./start.html">
             <h1 class="title">Enjoy</h1>
         </a>
 
