börjat på cartside

--- a/login.html
+++ b/login.html
@@ -10,7 +10,6 @@
     <script defer type="module" src="./JS/loginJS.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./CSS/loginStyling.css">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
         </a>
 
         <div id="authentication">
-            <p id="counter">1</p>
+            <p id="counter"></p>
             <div class="cartIcon">
                 <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
