--- a/Cart.html
+++ b/Cart.html
@@ -8,13 +8,13 @@
     <title>Cart</title>
     <link rel="stylesheet" href="./CSS/cartStyling.css">
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
-    <script defer type="module" src="./JS/cartJS.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
+    <script defer type="module" src="./JS/cartJS.js"></script>
 </head>
 
 <body>
     <header class="topnav">
-        <a href="./login.html">
+        <a href="./start.html">
             <h1 class="title">Enjoy</h1>
         </a>
 
