--- a/start.html
+++ b/start.html
@@ -35,7 +35,7 @@
     <main>
         <div class="container">
             <aside id="categories">
-                <a href="./login.html">
+                <a href="./start.html">
                     <p id="getProds">Products</p>
                 </a>
                 <!-- This div will have the list "Categs" in it
