changed the response when sending get to users

--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,9 @@
 
 <body>
     <header>
-        <div class="logo">ENJOY</div>
+        <a style="text-decoration: none;" href="./start.html">
+            <div class="logo">ENJOY</div>
+        </a>
         <div id="adminName">Bara Abdullatif</div>
         <div id="logout"><i class="fas fa-sign-out-alt"></i></div>
     </header>
