change atag link to start.html

--- a/signupUser.html
+++ b/signupUser.html
@@ -37,7 +37,7 @@
 
         <div class="signUpForm">
 
-            <a href="./login.html" id="crossReg"><i class="fas fa-times"></i></a>
+            <a href="./start.html" id="crossReg"><i class="fas fa-times"></i></a>
             <label for="firstname" class="userFirstNlabel">Firstname</label>
             <input type="text" value="" class="userFirstNInput" name="firstname" id="firstname">
 
