clean up and style cartside :)

--- a/signupUser.html
+++ b/signupUser.html
@@ -21,12 +21,8 @@
         </a>
 
         <div id="authentication">
-            <p id="counter">1</p>
-            <div class="cartIcon">
-                <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
-            </div>
             <div class="userIcon"><i class="fas fa-users"></i></div>
-            <input id="username" type="text" placeholder="username">
+            <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
             <button class="button">Submit</button>
         </div>
