--- a/Cart.html
+++ b/Cart.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cart</title>
-    <link rel="stylesheet" href="./CSS/cartStyling.css">
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
     <script defer type="module" src="./JS/cartJS.js"></script>
     <script defer type="module" src="./JS/mainJS.js"></script>
+    <link rel="stylesheet" href="./CSS/cartStyling.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
             <div class="userIcon"><i class="fas fa-users"></i></div>
-            <input id="username" type="text" placeholder="username">
+            <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
             <button class="button">Submit</button>
             <a href="./signupUser.html"><button class="button">Sign Up</button></a>
@@ -33,12 +33,17 @@
         </div>
     </header>
     <main>
-        <div id="cartProducts">
-
-        </div>
+        <div id="cartProducts"></div>
         <div id="checkBox">
-
+            <div class="shipContainer">
+                <input type="submit" value="Select" name="Submit" id="shipperSubmit" class="button">
+                <input type="radio" name="ShippersOptions" value="DHL" id="DHL"> DHL
+                <input type="radio" name="ShippersOptions" value="Post" id="Post"> Post
+                <input type="radio" name="ShippersOptions" value="Online" id="Online"> Online-Code
+            </div>
         </div>
+
+
     </main>
     <footer class="footer">
         <div>
@@ -53,4 +58,5 @@
 </body>
 
 </html>
+
 </html>
