--- a/start.html
+++ b/start.html
@@ -24,7 +24,7 @@
                 <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
             <div class="userIcon"><i class="fas fa-users"></i></div>
-            <input id="username" type="text" placeholder="username">
+            <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
             <button id="login" class="button">Submit</button>
             <a href="./signupUser.html"><button class="button">Sign Up</button></a>
