try getting mypagez

--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
-    <link rel="stylesheet" href="./CSS/loginStyling.css">
+    <link rel="stylesheet" href="./CSS/startStyling.css">
     <script defer type="module" src="./JS/mainJS.js"></script>
     <script defer type="module" src="./JS/startJS.js"></script>
     <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
             <div class="cartIcon">
                 <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
-            <div class="userIcon"><i class="fas fa-users"></i></div>
+            <a class="userIcon" href="./mypages.html"><i class="fas fa-users"></i></a>
             <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
             <button id="login" class="button">Submit</button>
