--- a/mypages.html
+++ b/mypages.html
@@ -23,20 +23,23 @@
                 <!--Wlecome TEXT -->
             </div>
             <div class="userIcon"><i class="fas fa-users"></i>
-                <p>MY PAGES </p>
+                <p class="myPages">MY PAGES </p>
             </div>
         </div>
     </header>
     <main>
         <div id="orderContainer">
-            <div id="orders">Your Orders</div>
-            <div id="allProducts"></div>
-            <div id="adminContainer">
-                <div id="recivedOrders">
-                    <p class="text">Checkbox if you recived your orders</p><input type="radio" name="Recived" value="true" id="Recived">
-                </div>
-                <h3 id="sendOrders">Your orders has not been send yet!</h3>
+            <h1 id="orders">Your Orders</h1>
+            <p id="totalPrice"></p>
+            <div id="recivedOrders">
+                <input type="radio" name="Recived" value="true" id="Recived">
+                <p>Checkbox if you recived your orders</p>
             </div>
+        </div>
+        <div id="allProducts"></div>
+
+        <div id="adminContainer">
+            <h3 id="sendOrders">Your orders has not been send yet!</h3>
         </div>
     </main>
 </body>
