--- a/mypages.html
+++ b/mypages.html
@@ -22,7 +22,7 @@
             <div>
                 <!--Wlecome TEXT -->
             </div>
-            <div class="userIcon"><i class="fas fa-users"></i>
+            <div class="userIcon"><a href="./mypages.html"><i class="fas fa-users"></i></a>
                 <p class="myPages">MY PAGES </p>
             </div>
         </div>
@@ -31,15 +31,15 @@
         <div id="orderContainer">
             <h1 id="orders">Your Orders</h1>
             <p id="totalPrice"></p>
-            <div id="recivedOrders">
-                <input type="radio" name="Recived" value="true" id="Recived">
-                <p>Checkbox if you recived your orders</p>
+            <div id="receivedOrders">
+                <input type="radio" name="received" value="true" id="received">
+                <p>Checkbox if you received your orders</p>
             </div>
         </div>
-        <div id="allProducts"></div>
+        <div id="userProducts"></div>
 
         <div id="adminContainer">
-            <h3 id="sendOrders">Your orders has not been send yet!</h3>
+            <h3 id="sendOrdersText"></h3>
         </div>
     </main>
 </body>
