--- a/Cart.html
+++ b/Cart.html
@@ -23,7 +23,7 @@
             <div class="cartIcon">
                 <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             </div>
-            <div class="userIcon"><i class="fas fa-users"></i></div>
+            <div class="userIcon"><a href="./mypages.html"><i class="fas fa-users"></i></a></div>
             <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
             <button class="button">Submit</button>
