done my pages to get products depending on the inlogged user

--- a/mypages.html
+++ b/mypages.html
@@ -28,19 +28,8 @@
         </div>
     </header>
     <main>
-        <div id="orderContainer">
-            <h1 id="orders">Your Orders</h1>
-            <p id="totalPrice"></p>
-            <div id="receivedOrders">
-                <input type="radio" name="received" value="true" id="received">
-                <p>Checkbox if you received your orders</p>
-            </div>
-        </div>
-        <div id="userProducts"></div>
-
-        <div id="adminContainer">
-            <h3 id="sendOrdersText"></h3>
-        </div>
+        <div id="ordersContainer">
+            <h1>Your Orders</h1>
     </main>
 </body>
 
