--- a/start.html
+++ b/start.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cart</title>
-    <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
-    <script defer type="module" src="./JS/cartJS.js"></script>
+    <title>Home</title>
+    <link rel="stylesheet" href="./CSS/loginStyling.css">
     <script defer type="module" src="./JS/mainJS.js"></script>
-    <link rel="stylesheet" href="./CSS/cartStyling.css">
+    <script defer type="module" src="./JS/startJS.js"></script>
+    <script src="https://kit.fontawesome.com/c9b461b663.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,33 +26,34 @@
             <div class="userIcon"><i class="fas fa-users"></i></div>
             <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
-            <button class="button">Submit</button>
+            <button id="login" class="button">Submit</button>
             <a href="./signupUser.html"><button class="button">Sign Up</button></a>
         </div>
 
         </div>
     </header>
     <main>
-        <div id="cartProducts"></div>
-        <div id="checkBox">
-            <select id="shipper">
-                <option value="1">DHL</option>
-                <option value="2">Post</option>
-                <option value="3">Online</option>
-            </select>
-            <button id="checkout">Checkout</button>
+        <div class="container">
+            <aside id="categories">
+                <a href="./start.html">
+                    <p id="getProds">Products</p>
+                </a>
+            </aside>
+            <div class="allProducts" id="allProducts">
+            </div>
         </div>
-
-
     </main>
     <footer class="footer">
         <div>
             <h2 class="SubScribe">Subscribe Newsletter</h2>
-            <input type="text" placeholder="firstname">
-            <input type="text" placeholder="lastname">
-            <input type="text" placeholder="email">
+            <input type="text" placeholder="firstname" name="firstname">
+            <input type="text" placeholder="lastname" name="lastname">
+            <input type="text" placeholder="email" name="email">
             <button id="newsbtn" class="button">Submit</button>
         </div>
+        <div><a href="./admin.html">go to admin site</a></div>
+
+        <!-- If we want to have footer for some reason -->
     </footer>
 </body>
 
