--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to ENJOY!!</title>
     <link rel="stylesheet" href="./CSS/indexStyling.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -25,8 +24,8 @@
         </div>
     </div>
     <div class="jiggi">
-        <a href="./login.html"><button type="button" class="btn btn-primary btn-lg">YES</button></a>
-        <a href="./login.html"><button type="button" class="btn btn-secondary btn-lg">YES</button></a>
+        <a href="./start.html"><button type="button" class="btn btn-primary btn-lg">YES</button></a>
+        <a href="./start.html"><button type="button" class="btn btn-secondary btn-lg">YES</button></a>
     </div>
 
     </div>
@@ -50,4 +49,5 @@
 </body>
 
 </html>
+
 </html>
