--- a/admin.html
+++ b/admin.html
@@ -120,10 +120,10 @@
                                 <div class="row">
                                     <div class="label-left">Category Name</div>
                                     <select name="CategoryName" id="CategoryName" tabindex="1" placeholder="Category Name">
-                                        <option value="AddCategory">Choice Category</option>
+                                        <!-- <option value="AddCategory">Choice Category</option>
                                         <option value="PC">PC</option>
                                         <option value="X-Box">X-Box</option>
-                                        <option value="PST">PST</option>
+                                        <option value="PST">PST</option> -->
                                     </select>
                                 </div>
 
