--- a/start.html
+++ b/start.html
@@ -18,17 +18,18 @@
             <h1 class="title">Enjoy</h1>
         </a>
 
+        <p id="counter"></p>
+        <div class="cartIcon">
+            <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
+        </div>
+        <a class="userIcon" href="./mypages.html"><i class="fas fa-users"></i></a>
         <div id="authentication">
-            <p id="counter"></p>
-            <div class="cartIcon">
-                <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-            <a class="userIcon" href="./mypages.html"><i class="fas fa-users"></i></a>
             <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
             <button id="login" class="button">Submit</button>
             <a href="./signupUser.html"><button class="button">Sign Up</button></a>
         </div>
+        <button id="signOut">Log Out</button>
 
         </div>
     </header>
