--- a/mypages.html
+++ b/mypages.html
@@ -24,6 +24,7 @@
             </div>
             <div class="userIcon"><a href="./mypages.html"><i class="fas fa-users"></i></a>
                 <p class="myPages">MY PAGES </p>
+                <button id="signOut">Sign Out</button>
             </div>
         </div>
     </header>
