--- a/start.html
+++ b/start.html
@@ -18,6 +18,8 @@
             <h1 class="title">Enjoy</h1>
         </a>
 
+        <h3 id="welcome"></h3>
+
         <p id="counter"></p>
         <div class="cartIcon">
             <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
