nice start responsive

--- a/start.html
+++ b/start.html
@@ -20,11 +20,13 @@
 
         <h3 id="welcome"></h3>
 
-        <div class="cartIcon">
-            <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
+        <div class="cartBox">
+            <a class="cartIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
             <p id="counter"></p>
         </div>
+
         <a class="userIcon" href="./mypages.html"><i class="fas fa-users"></i></a>
+
         <div id="authentication">
             <input id="username" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
@@ -33,7 +35,6 @@
         </div>
         <button id="signOut">Log Out</button>
 
-        </div>
     </header>
     <main>
         <div class="container">
@@ -54,9 +55,7 @@
             <input type="text" placeholder="email" name="email">
             <button id="newsbtn" class="button">Submit</button>
         </div>
-        <div><a href="./admin.html">go to admin site</a></div>
-
-        <!-- If we want to have footer for some reason -->
+        <!--To be continued... <div><a href="./admin.html">go to admin site</a></div> -->
     </footer>
 </body>
 
