--- a/Cart.html
+++ b/Cart.html
@@ -18,9 +18,9 @@
             <h1 class="title">Enjoy</h1>
         </a>
 
-        <p id="counter"></p>
-        <div class="cartIcon">
-            <a class="aIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
+        <div class="cartBox">
+            <a class="cartIcon" href="./Cart.html"><i class="fas fa-shopping-cart"></i></a>
+            <p id="counter"></p>
         </div>
         <div class="userIcon"><a href="./mypages.html"><i class="fas fa-users"></i></a></div>
         <button id="signOut">Log Out</button>
