--- a/mypages.html
+++ b/mypages.html
@@ -19,13 +19,9 @@
         </a>
 
         <div id="authentication">
-            <div>
-                <!--Wlecome TEXT -->
-            </div>
-            <div class="userIcon"><a href="./mypages.html"><i class="fas fa-users"></i></a>
-                <p class="myPages">MY PAGES </p>
-                <button id="signOut">Log Out</button>
-            </div>
+            <a class="userIcon" href="./mypages.html"><i class="fas fa-users"></i></a>
+            <p class="myPages">MY PAGES </p>
+            <button id="signOut">Log Out</button>
         </div>
     </header>
     <main>
