Finish with Send Order to customer,Add/Update/Delete Category,Add/Update/Delete Product, Show as want Newsletter

--- a/admin.html
+++ b/admin.html
@@ -77,12 +77,16 @@
                     </div>
 
                     <div class="bdcCatDelUpp bdc">
-                        <div class="addText">Update/Delete Products</div>
+                        <div class="addText">Update/Delete Category</div>
                         <div class="columnContainer">
                             <div class="columnMain">
                                 <div class="columnMainText">Category ID</div>
                                 <div class="columnMainText">Category Name</div>
                             </div>
+                        </div>
+                        <div class="editProductContainer">
+                            <div style="font-size: 18px;">Update Category Name</div>
+                            <input type="text" name="categoryNameText" value="" class="editProductText">
                         </div>
                     </div>
 
